# Agentic-AI-Firewall-Orchestrator

./: .gitignore  Dockerfile  README.md  afo  afo-ui  afo.db  afo_mcp_server.py  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  setup.sh
afo_daemon/: main.py
afo_daemon/detection/: models.py  monitor.py  signatures.py
afo_daemon/intelligence/: analyzer.py  feeds.py  manager.py
afo_daemon/learning/: __init__.py  config_advisor.py  insight_engine.py  memory_store.py  pattern_learner.py
afo_daemon/response/: engine.py
afo_mcp/: __init__.py  models.py  security.py  server.py
afo_mcp/tools/: __init__.py  conflicts.py  deployer.py  learning.py  network.py
agents/: __init__.py  clarification.py  enhanced_agent.py  firewall_agent.py  language_normalizer.py  operations.py  prompts.py  risk_analyzer.py  rule_query.py  slash_commands.py  time_parser.py  tools.py  typo_normalizer.py  web_search_validator.py
backend/: aws.py  base.py  factory.py  iptables.py  mcp_retry.py  models.py  nftables.py  opnsense.py  safety.py
config/: safety.yaml
db/: __init__.py  database.py  models.py  vector_store.py
docs/: ARCHITECTURE_ANALYSIS.md  LEARNING_SYSTEM.md  SLASH_COMMANDS.md  TEST_EXAMPLES.md  USER_GUIDE.md  WEB_SEARCH_VALIDATION.md
scripts/: setup-opnsense-vm.sh
services/: bulk_operations.py  config_manager.py  domain_blocker.py  firewall.py  geoip.py  geoip_db.py  learning_service.py  multi_firewall.py  rate_limiter.py  rule_scheduler.py  snapshot.py
systemd/: afo.service
ui/: app.py
(+21 files in other folders)
