[project]
name = "afo"
version = "0.1.0"
description = "Autonomous Firewall Orchestrator - Natural language to nftables rules"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.4.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "langchain>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-text-splitters>=0.3.0",
    "httpx>=0.27.0",
    "streamlit>=1.38.0",
    "sqlmodel>=0.0.16",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    "structlog>=24.1.0",
    "textual>=0.70.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
afo-ui = "ui.tui.app:sync_main"
afo-dashboard = "ui.app:main"  # Renamed streamlit app
afo-ingest = "db.vector_store:ingest_docs_cli"
afo-daemon = "afo_daemon.main:main"
afo-init-db = "db.database:init_db_sync"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["afo_mcp", "agents", "db", "ui", "backend", "services", "utils"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.isort]
combine-as-imports = true
